Update 3.07 Understand methods of cryptanalytic attacks.md

--- a/DOMAIN3: Security Architecture and Engineering/3.07 Understand methods of cryptanalytic attacks.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.07 Understand methods of cryptanalytic attacks.md
@@ -476,4 +476,75 @@ Strong authentication and secure key exchange protocols are essential. Using dig
 
 ---
 
+## 3.7.11 Pass the hash  ##
 
+Pass-the-Hash (PtH) attacks in cryptographic contexts occur when an attacker gains access to the hashed version of a password, rather than the password itself, and uses it to authenticate to a system without needing to crack or decrypt the hash. This type of attack is common in systems that store password hashes for authentication but fail to implement strong security measures to prevent attackers from using these hashes directly.
+In a Pass-the-Hash attack, once an attacker has obtained the hash value, they can use it to impersonate the legitimate user without having to reverse-engineer or guess the actual password. For example, in a networked environment like Windows, the attacker might capture password hashes from the network traffic or from compromised machines. By using these hashes, the attacker can authenticate to other machines or services within the network as if they were the legitimate user, effectively bypassing the need to know the plaintext password.
+
+Pass-the-Hash attacks are particularly effective in environments that rely on weak or unsalted hashing algorithms or where the hashes are not adequately protected. If an attacker can obtain hashes from a compromised machine or sniff them from the network, they can use the hashes to move laterally across the network, accessing multiple systems with little effort.
+
+To defend against Pass-the-Hash attacks, it is important to use strong, salted hashes that are difficult to reverse, implement proper key management practices, and ensure that password hashes are not stored or transmitted in plain text. Additional protective measures include using multi-factor authentication (MFA), enforcing the use of complex passwords, and implementing network segmentation to limit lateral movement within the system.
+
+## 3.7.12 Kerberos exploitation ##
+
+Kerberos exploitation refers to attacks that target vulnerabilities in the Kerberos authentication protocol, which is widely used in network environments to authenticate users and services securely. In these attacks, the attacker aims to intercept, manipulate, or exploit weaknesses in the Kerberos protocol to gain unauthorized access to a system or network.
+
+One common Kerberos attack is the **Pass-the-Ticket (PTT)** attack, where an attacker obtains a valid Kerberos ticket and uses it to impersonate a legitimate user. This can happen if an attacker gains access to a system and is able to steal a ticket from the Kerberos ticket cache or the ticket-granting ticket (TGT) used in the authentication process. Once the attacker has the TGT, they can use it to request service tickets for other systems on the network, allowing them to move laterally or access sensitive information.
+
+Another type of attack is the **Kerberos ticket forging attack**, where an attacker attempts to forge or manipulate Kerberos tickets to impersonate a user or service. This is typically done by exploiting weak cryptographic implementations, misconfigurations, or flaws in the way the Kerberos tickets are generated or verified.
+
+To defend against Kerberos exploitation, it’s critical to implement strong security measures, such as regularly changing service account passwords, enabling mutual authentication, ensuring the proper configuration of Kerberos realms, and monitoring for unusual or suspicious ticket activity. Using multi-factor authentication (MFA) and securing the systems storing Kerberos keys can also reduce the attack surface for Kerberos-based attacks.
+
+### Open Questions ###
+
+1. What is a Pass-the-Ticket (PTT) attack in Kerberos, and why is it dangerous?
+<details>
+  <summary>Show answer</summary>
+A PTT attack occurs when an attacker steals a valid Kerberos ticket, such as a Ticket-Granting Ticket (TGT), from a compromised system. With the stolen ticket, the attacker can impersonate the legitimate user and request access to other network services. This is dangerous because it enables lateral movement across the network without needing the user’s actual password.
+</details>
+
+2. How can attackers forge Kerberos tickets, and what advantage does this give them?
+<details>
+  <summary>Show answer</summary>
+Attackers can forge tickets (such as creating a "Golden Ticket") by exploiting weak cryptographic keys, compromised service accounts, or misconfigurations. A forged ticket allows the attacker to impersonate any user, even domain administrators, giving them virtually unlimited access to the network.
+</details>
+
+3. What security measures help defend against Kerberos exploitation?
+<details>
+  <summary>Show answer</summary>
+Defenses include regularly rotating service account passwords, enforcing mutual authentication, enabling multi-factor authentication (MFA), properly configuring Kerberos realms, and monitoring for unusual ticket activity. Protecting systems that store Kerberos keys (like domain controllers) is also critical, since their compromise enables powerful ticket forging attacks.
+</details>
+
+---
+
+## 3.7.13 Ransomware ##
+
+Ransomware attacks are a type of cyberattack where malicious software encrypts the victim's files or locks them out of their systems, with the attacker demanding a ransom payment in exchange for decrypting the files or restoring access. These attacks often target individuals, businesses, and government organizations, causing significant disruption and financial loss.
+
+In the context of cryptographic attacks, **ransomware typically uses strong encryption algorithms to lock the victim's files, rendering them inaccessible**. The attacker will then display a ransom note, demanding payment, often in cryptocurrency, in exchange for a decryption key. If the victim refuses to pay, the attacker may threaten to permanently delete or leak the encrypted data.
+
+Ransomware can spread through various methods, including phishing emails, malicious attachments, software vulnerabilities, or even through infected websites. Once the malware gains access to the victim's system, it may encrypt files on local drives, shared network drives, or cloud storage, making recovery difficult without the decryption key.
+
+To defend against ransomware attacks, it is essential to **regularly back up critical data** and store it securely, ensuring that backups are not connected to the network. Additionally, organizations should implement strong security protocols, such as network segmentation, intrusion detection systems, and robust endpoint protection. Employee training on identifying phishing attempts and maintaining up-to-date software can also help mitigate the risk of ransomware infections.
+
+### Open Questions ###
+
+1. How does ransomware use cryptography to make victim data inaccessible?
+<details>
+  <summary>Show answer</summary>
+Ransomware employs strong encryption algorithms (such as AES or RSA) to encrypt files on the victim’s system. Without the attacker’s private decryption key, the victim cannot access their data, making the ransom payment the only quick option to recover it.
+</details>
+
+2. Why is paying the ransom considered risky and not always effective?
+<details>
+  <summary>Show answer</summary>
+Paying the ransom does not guarantee that attackers will provide the decryption key or that the data will be restored intact. In some cases, attackers may demand additional payments or simply disappear, leaving the victim with encrypted, unusable files. It also funds further criminal activity.
+</details>
+
+3. What are the most effective defenses against ransomware attacks?
+<details>
+  <summary>Show answer</summary>
+The best defenses include maintaining regular, offline backups of critical data, keeping systems and applications updated to patch vulnerabilities, and using layered security (firewalls, endpoint protection, intrusion detection). Training employees to recognize phishing attempts is equally critical since phishing is a common ransomware entry point.
+</details>
+
+---
