Update 3.08 Apply security principles to site and facility design.md

--- a/DOMAIN3: Security Architecture and Engineering/3.08 Apply security principles to site and facility design.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.08 Apply security principles to site and facility design.md
@@ -61,6 +61,71 @@ The second generation focuses on the social environment—things like community 
 | Connectivity        | Connect with police and city services for support.        |
 | Threshold Community | Get enough people engaged to make prevention effective.   |
 
-
-
 :link: The (The International Crime Prevention Through Environmental Design Association)[https://www.cpted.net/] has the mission to create safer environments and improve the quality of life through the use of CPTED principles and strategies.
+
+### Open Questions ###
+
+1. Why is site selection considered one of the most critical steps in facility security planning?
+<details>
+  <summary>Show answer</summary>
+Site selection directly affects the facility’s exposure to threats such as crime, natural disasters, and industrial hazards. A poorly chosen site can undermine even the strongest security measures, while a well-selected site reduces risks and enhances resilience from the start.
+</details>
+
+2. How does a risk assessment shape the overall security facility plan?
+<details>
+  <summary>Show answer</summary>
+A risk assessment identifies potential threats and vulnerabilities, allowing organizations to design targeted security controls. Without it, resources may be wasted on irrelevant measures, or critical threats may remain unaddressed.
+</details>
+
+3. What role does access control play in protecting both people and assets within a facility?
+<details>
+  <summary>Show answer</summary>
+Access control ensures that only authorized personnel can enter sensitive areas. By using barriers, credentials, and checkpoints, it minimizes the risk of insider threats, theft, and unauthorized intrusion.
+</details>
+
+4. In what ways can physical security uphold the principles of Confidentiality, Integrity, and Availability (CIA)?
+<details>
+  <summary>Show answer</summary>
+Confidentiality is supported through restricted zones and surveillance, Integrity through locks and tamper-evident systems, and Availability through redundant infrastructure like backup power and disaster recovery plans.
+</details>
+
+5. Why is technology convergence important in modern facility security?
+<details>
+  <summary>Show answer</summary>
+Integrating physical and IT security systems enables unified monitoring, faster response, and smarter automation. For example, an access control breach can automatically trigger camera recording and alert personnel in real time.
+</details>
+
+6. How does Crime Prevention Through Environmental Design (CPTED) reduce crime risks?
+<details>
+  <summary>Show answer</summary>
+CPTED reduces opportunities for crime by shaping both the physical and social environment. Good lighting, clear sight lines, and strong community trust discourage criminals and make residents feel safer.
+</details>
+
+7. What is the difference between first-generation and second-generation CPTED?
+<details>
+  <summary>Show answer</summary>
+First-generation CPTED emphasizes the physical environment—fences, lighting, and visibility—while second-generation CPTED focuses on social cohesion, community culture, and partnerships with external services like law enforcement.
+</details>
+
+8. How can security personnel complement technological security systems in a facility?
+<details>
+  <summary>Show answer</summary>
+While technology provides monitoring and automation, human presence adds flexibility, judgment, and deterrence. Security personnel can assess unusual behaviors, respond to emergencies, and adapt to unexpected situations that machines may not interpret well.
+</details>
+
+9. What are some best practices for ensuring facility availability during disruptions?
+<details>
+  <summary>Show answer</summary>
+Organizations should deploy redundant power supplies, failover systems, and tested business continuity plans. Regular drills and maintenance help ensure critical operations continue even during natural disasters or cyber-physical attacks.
+</details>
+
+10. How do regulations like ISO 27001, NIST 800-53, HIPAA, and PCI DSS impact facility security planning?
+<details>
+  <summary>Show answer</summary>
+These standards require physical safeguards to protect sensitive data. Compliance ensures that organizations address security holistically, covering both digital and physical aspects to reduce liability and protect assets.
+</details>
+
+
+
+
+
