Update 5.L.1 FIDO and FIDO2: Revolutionizing Authentication.md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.L.1 FIDO and FIDO2: Revolutionizing Authentication.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.L.1 FIDO and FIDO2: Revolutionizing Authentication.md
@@ -36,18 +36,42 @@ The Key features of FIDO are:
 
 - Decentralized: Does not rely on a central identity provider, enhancing security and privacy
 
-Fiso comes in 2 specifications:
+FIDO comes in 2 specifications:
+
+**FIDO UAF (Universal Authentication Framework):** One of the early FIDO specifications, UAF allows for passwordless authentication using various authentication methods such as biometrics (fingerprint, iris, voice, facial recognition), PINs, or even a swipe gesture.
+
+**FIDO U2F (Universal Second Factor):** U2F, on the other hand, provides a strong second factor for existing password-based logins. This typically involves a USB security key that the user taps to confirm their identity after entering their password. U2F significantly enhances security against phishing attacks.
+
+FIDO2 is the latest generation of the FIDO specifications, building upon the foundations of UAF and U2F. It introduces two core components:
+
+- **WebAuthn (Web Authentication):** A web API that enables strong, passwordless, and phishing-resistant authentication in web browsers and across different devices. WebAuthn is a W3C standard, making it widely adopted by major browsers.
+
+- **CTAP (Client to Authenticator Protocol):** Defines how a FIDO authenticator communicates with a client (e.g., a web browser or operating system) over various transports like USB, NFC, or Bluetooth.
+
+FIDO2 leverages WebAuthn to integrate directly into web browsers. When a user registers with a website supporting FIDO2, their browser (acting as the client) interacts with a FIDO2 authenticator. This authenticator generates a unique cryptographic key pair for that specific website. The public key is then sent to the website's server for storage, while the private key remains securely on the authenticator.
+
+For subsequent logins, the website challenges the browser, which then prompts the user to authenticate with their FIDO2 authenticator (e.g., fingerprint scan, facial recognition, or PIN on a security key). The authenticator uses its private key to sign the challenge, and the browser sends this signed response to the website for verification.
+
+Here's an illustration of the FIDO2 authentication flow:
 
 ```mermaid
-graph TD
-    A[User] --> B[FIDO Authenticator]
-    B --> C{FIDO Client Software}
-    C --> D[FIDO Server]
-    D -- Registers User/Authenticator --> E[Relying Party Application]
-    E -- Authenticates User --> A
+sequenceDiagram
+    participant User
+    participant Browser
+    participant Web Server
+    participant FIDO2 Authenticator
+
+    User->>Browser: Access Website
+    Browser->>Web Server: Request Login
+    Web Server->>Browser: Send WebAuthn Challenge
+    Browser->>User: Prompt for Authentication
+    User->>FIDO2 Authenticator: Authenticate (e.g., Fingerprint)
+    FIDO2 Authenticator->>Browser: Send Signed Response (via CTAP)
+    Browser->>Web Server: Send Signed Response
+    Web Server->>Web Server: Verify Signature
+    Web Server->>Browser: Login Successful
+    Browser->>User: Access Granted
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
-
-    
