Update 5.L.1 FIDO and FIDO2: Revolutionizing Authentication.md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.L.1 FIDO and FIDO2: Revolutionizing Authentication.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.L.1 FIDO and FIDO2: Revolutionizing Authentication.md
@@ -55,6 +55,23 @@ For subsequent logins, the website challenges the browser, which then prompts th
 Here's an illustration of the FIDO2 authentication flow:
 
 ```mermaid
+
+%%{init: { 'theme': 'base', 'themeVariables': {
+    'primaryColor': '#f0f0f0',
+    'primaryBorderColor': '#333333',
+    'primaryTextColor': '#111111',
+    'actorBkg': '#e0e0e0',
+    'actorBorder': '#444444',
+    'actorTextColor': '#111111',
+    'lineColor': '#555555',
+    'signalColor': '#333333',
+    'signalTextColor': '#000000',
+    'altBackground': '#d9d9d9',
+    'sequenceNumberColor': '#666666'
+}}}%%
+
+
+
 sequenceDiagram
     participant User
     participant Browser
@@ -74,3 +91,14 @@ sequenceDiagram
 
 
 ```
+
+The following table recaps the differences between FIDO and FIDO2:
+
+| Feature         | FIDO (UAF/U2F)                                                                 | FIDO2 (WebAuthn/CTAP)                                                   |
+|-----------------|---------------------------------------------------------------------------------|-------------------------------------------------------------------------|
+| Primary Use Case | UAF: Passwordless, U2F: Second Factor                                          | Primarily Passwordless, Strong Second Factor                            |
+| Integration     | Often requires client-side software/apps for UAF, U2F via browser extensions or specific support | Native integration into web browsers (WebAuthn)                         |
+| Standardization | FIDO Alliance specifications                                                   | W3C WebAuthn standard, FIDO Alliance CTAP                               |
+| Cross-Platform  | Can be platform-specific (UAF), U2F more general                               | Highly cross-platform due to browser integration                        |
+| Device Support  | USB security keys, built-in biometrics                                         | Wider range, including platform authenticators (built-in) and roaming authenticators (USB keys, phones) |
+
