Update 5.L.1 FIDO and FIDO2: Revolutionizing Authentication.md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.L.1 FIDO and FIDO2: Revolutionizing Authentication.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.L.1 FIDO and FIDO2: Revolutionizing Authentication.md
@@ -52,7 +52,7 @@ FIDO2 leverages WebAuthn to integrate directly into web browsers. When a user re
 
 For subsequent logins, the website challenges the browser, which then prompts the user to authenticate with their FIDO2 authenticator (e.g., fingerprint scan, facial recognition, or PIN on a security key). The authenticator uses its private key to sign the challenge, and the browser sends this signed response to the website for verification.
 
-Here's an illustration of the FIDO2 authentication flow:
+Here's an illustration of the **FIDO2 authentication flow**:
 
 ```mermaid
 
