Update 5.L.1 FIDO and FIDO2: Revolutionizing Authentication.md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.L.1 FIDO and FIDO2: Revolutionizing Authentication.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.L.1 FIDO and FIDO2: Revolutionizing Authentication.md
@@ -26,6 +26,8 @@ At its core, FIDO authentication involves two main components:
 
 When a user attempts to log in, the FIDO authenticator cryptographically signs a challenge from the FIDO server. This signed challenge is then sent back to the server, which verifies it without ever exchanging the user's actual credentials (like a password).
 
+:link: [Here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN3%3A%20Security%20Architecture%20and%20Engineering/3.06%20Select%20and%20determine%20cryptographic%20solutions.md#362-cryptographic-methods-eg-symmetric-asymmetric-elliptic-curves-quantum) you can find some basics about cryptography 
+
 The Key features of FIDO are:
 
 - Strong Authentication: Utilizes public-key cryptography, making it highly resistant to phishing and man-in-the-middle attacks.
