Update 3.09 Design site and facility security controls.md

--- a/DOMAIN3: Security Architecture and Engineering/3.09 Design site and facility security controls.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.09 Design site and facility security controls.md
@@ -110,3 +110,20 @@ They increasingly use virtualization and cloud integration for scalability and f
 
 ---
 
+## 3.9.3 Media storage facilities ##
+
+Media storage facilities are specialized areas within an organization dedicated to the secure storage, management, and retrieval of physical and digital media, including tapes, hard drives, optical discs, and other forms of data storage. These facilities are critical for safeguarding backup copies of essential business data, archiving historical records, and ensuring business continuity in the event of data loss or system failure.
+
+A primary consideration for media storage facilities is physical security. Access to these facilities must be strictly controlled to prevent unauthorized personnel from tampering with or stealing sensitive media. This typically involves securing the facility with locked doors, biometric or card access controls, and regular surveillance through CCTV cameras. Additionally, to protect against both internal and external threats, the facility should be monitored by security personnel and equipped with alarms or other intrusion detection systems.
+
+Environmental controls are another critical factor in the management of media storage. Most media are sensitive to temperature, humidity, and exposure to light, which can degrade the media over time and potentially result in data loss. Therefore, media storage facilities should be equipped with climate control systems to maintain an optimal environment for storage. This includes temperature and humidity monitoring systems, air conditioning, and dehumidification units that ensure the preservation of the media.
+
+:bulb: In addition to temperature and humidity control, media storage facilities should be organized to optimize space utilization and facilitate easy retrieval. Proper cataloging and labeling of media are necessary to ensure that stored items can be quickly identified and retrieved when needed. Media should be stored in secure, fire-resistant cabinets, racks, or vaults, with strict procedures in place for handling and transporting media to and from the facility.
+
+To further enhance data protection, media storage facilities should implement access control measures to limit who can retrieve or handle stored media. These measures could include a chain-of-custody system, where each movement of media is documented, or two-person integrity requirements for accessing sensitive data. Data stored on digital media, such as hard drives or tapes, should be encrypted both at rest and in transit to ensure that unauthorized parties cannot access it.
+
+In addition to physical and environmental security, media storage facilities must address the risks of **natural disasters**, fire, and accidental destruction. Fire suppression systems, such as gaseous fire suppression or sprinklers, should be installed to protect against fire hazards, and facilities should be built with fire-resistant materials. Furthermore, organizations must implement off-site storage for critical media to ensure redundancy and support disaster recovery efforts in the event of catastrophic loss or damage to the primary storage facility.
+
+Finally, as part of a comprehensive data management strategy, **regular audits and reviews** should be conducted to ensure the integrity and security of the media stored within the facility. Proper retention and disposal policies should also be in place to ensure that outdated or obsolete media are securely destroyed to prevent unauthorized recovery of sensitive information.
+
+
